[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["hungdhv97 <hungdhv97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
fastapi = "^0.95.1"
cookiecutter = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
